# udacity-sfend

./: README.md
p1/src/: environment.cpp  options.h  processPointClouds.cpp  processPointClouds.h
p1/src/custom/: clustering.h  kdtree3d.h  options.h
p1/src/quiz/cluster/: CMakeLists.txt  cluster.cpp  cluster3d.cpp
p1/src/quiz/ransac/: ransac2d.cpp  ransac3d.cpp
p1/src/render/: render.cpp  render.h
p1/src/sensors/: lidar.h
projects/p1/: CMakeLists.txt  p1-lidar-obstacle-detection.md  p1-preliminary-configs.md
projects/p1/src/: environment.cpp  processPointClouds.cpp
projects/p1/src/custom/: options.h
projects/p1/src/quiz/ransac/: CMakeLists.txt
projects/p1/src/render/: box.h  render.cpp  render.h
projects/p1/src/sensors/: lidar.h
projects/p2/: p2-camera-based-2d-feature-tracking.md
projects/p2/analysis/: performance_evaluation.xls
projects/p2/src/: MidTermProject_Camera_Student.cpp  dataStructures.h  matching2D.hpp  matching2D_Student.cpp
projects/p3/: p3-track-an-object-in-3d-space.md
projects/p3/analysis/: p3_performance_eval.gnumeric
projects/p3/src/: FinalProject_Camera.cpp  camFusion.hpp  camFusion_Student.cpp  dataStructures.h  lidarData.cpp  lidarData.hpp  matching2D.hpp  matching2D_Student.cpp  objectDetection2D.cpp  objectDetection2D.hpp
projects/p4/: p4-radar-target-generation-and-detection.md
projects/p4/src/: radar_target_generation_and_detection.m
projects/p5/: CMakeLists.txt  p5-unscented-kalman-filter-highway-project.md
projects/p5/src/: highway.h  main.cpp  measurement_package.h  tools.cpp  tools.h  ukf.cpp  ukf.h
(+15 files in other folders)
